--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </p>
                 <p>
                   My research interests include video / 3D / 4D generation, especially human-related field. 
-                  <p style="color: red; font-weight: bold;">I am now seeking for a suitable phd position (<a href="data/zhuolong-CV.pdf">CV</a>   <a href="mailto:zhuolong@pjlab.com">Email</a>).</p> <br> Please feel free to drop me an email if you have any questions.
+                  <p style="color: red; font-weight: bold;">I am now seeking for a suitable phd position (<a href="data/ZhuoLong_CV.pdf">CV</a>   <a href="mailto:zhuolong@pjlab.com">Email</a>).</p> <br> Please feel free to drop me an email if you have any questions.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:zhuolong@pjlab.com">Email</a> &nbsp;/&nbsp;
@@ -69,11 +69,11 @@
             <tr onmouseout="renderme_stop()" onmouseover="renderme_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-                <div class="two" id='renderme_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/renderme.mp4" type="image/video">
+                <div class="two" id='renderme_image'><video  height=70% muted autoplay loop>
+                <source src="images/renderme.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div>
-                  <img src='images/renderme.png' width="160">
+                  <img src='images/renderme.png' width="180">
                 </div>
                 <script type="text/javascript">
                   function renderme_start() {
@@ -87,7 +87,7 @@
                 </script>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2305.13353">
+                <a href="https://renderme-360.github.io/">
                   <span class="papertitle">RenderMe-360: A Large Digital Asset Library and Benchmarks Towards High-fidelity Head Avatars
             </span>
                 </a>
@@ -116,7 +116,7 @@
               <a href="https://www.youtube.com/watch?v=L4YTBVg68vM">video</a>
               /
               <a href="https://arxiv.org/abs/2305.13353">arXiv</a>
-  
+              <p></p>
             </td>
   </tr>          
   
@@ -128,10 +128,10 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
               <div class="two" id='fvid_image'><video  width=100% height=100% muted autoplay loop>
-              <source src="images/fast-vid2vid.gif" type="image/gif">
+              <source src="images/fast-vid2vid.gif">
               Your browser does not support the video tag.
               </video></div>
-                <img src='images/fast-vid2vid.jpg' width="160">
+                <img src='images/fast-vid2vid.jpg' width="180">
               </div>
               <script type="text/javascript">
                 function fvid_start() {
@@ -145,7 +145,7 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2207.05049">
+              <a href="https://fast-vid2vid.github.io/">
                 <span class="papertitle">Fast-Vid2Vid: Spatial-Temporal Compression for Video-to-Video Synthesis
           </span>
               </a>
@@ -164,7 +164,7 @@
             <a href="https://www.youtube.com/watch?v=AhEqjGVuk4A&feature=youtu.be">video</a>
             /
             <a href="https://arxiv.org/abs/2207.05049">arXiv</a>
-
+            <p></p>
           </td>
 </tr>          
 
@@ -175,7 +175,7 @@
     <source src="images/sear.png" >
     Your browser does not support the video tag.
     </video></div>
-      <img src='images/sear.png' width="160">
+      <img src='images/sear.png' width="180">
     </div>
     <script type="text/javascript">
       function sear_start() {
@@ -221,7 +221,7 @@
     <source src="images/satfl.png" >
     Your browser does not support the video tag.
     </video></div>
-      <img src='images/satfl.png' width="160">
+      <img src='images/satfl.png' width="180">
     </div>
     <script type="text/javascript">
       function satfl_start() {
@@ -262,7 +262,7 @@
     <source src="images/isp.png" >
     Your browser does not support the video tag.
     </video></div>
-      <img src='images/isp.png' width="160">
+      <img src='images/isp.png' width="180">
     </div>
     <script type="text/javascript">
       function isp_start() {
@@ -303,7 +303,7 @@
     <source src="images/cwc.png" >
     Your browser does not support the video tag.
     </video></div>
-      <img src='images/cwc.png' width="160">
+      <img src='images/cwc.png' width="180">
     </div>
     <script type="text/javascript">
       function cwc_start() {
@@ -330,7 +330,7 @@
 
   <br>
   <em>Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) </em>,  2018
-
+  <br>
   <a href="https://ieeexplore.ieee.org/abstract/document/8659761">APSIPA ASC</a>
 
 </td>
@@ -345,7 +345,7 @@
     <source src="images/hcf.png" >
     Your browser does not support the video tag.
     </video></div>
-      <img src='images/hcf.png' width="160">
+      <img src='images/hcf.png' width="180">
     </div>
     <script type="text/javascript">
       function hcf_start() {
