--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p style="text-align:center">
                   <a href="mailto:zhuolong@pjlab.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/ZhuoLong_CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?user=_DVnyb8AAAAJ&hl=zh-CN">Scholar</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?user=_DVnyb8AAAAJ&hl=zh-CN">Scholar</a> 
 				 
                 </p>
               </td>
