--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </p>
                 <p>
                   My research interests include video / 3D / 4D generation, especially human-related field. 
-                  <p style="color: red; font-weight: bold;">I am now seeking for a suitable phd position (<a href="data/ZhuoLong_CV.pdf">CV</a>   <a href="mailto:zhuolong@pjlab.com">Email</a>).</p> <br> Please feel free to drop me an email (zhuolong@pjlab.com) if you have any questions.
+                  <p style="color: red; font-weight: bold;">I am now seeking for a suitable phd position (<a href="data/ZhuoLong_CV.pdf">CV</a>   <a href="mailto:zhuolong@pjlab.org.cn">Email</a>).</p> <br> Please feel free to drop me an email (zhuolong@pjlab.org.cn) if you have any questions.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:zhuolong@pjlab.com">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:zhuolong@pjlab.org.cn">Email</a> &nbsp;/&nbsp;
                   <a href="data/ZhuoLong_CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=_DVnyb8AAAAJ&hl=zh-CN">Scholar</a> 
 				 
