--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <p >
                   
                 </p>
+		<p>
+                  [2024-09] 1 paper accepted to TPAMI 2024.
+                </p>
                 <p>
                   [2023-09] 1 paper accepted to NeurIPS 2023 Datasets and Benchmarks Track.
                 </p>
