--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Long Zhuo
                 </p>
-                <p>Long Zhuo is now a research engineer at Shanghai AI Lab, working closely with  <a href="https://scholar.google.com/citations?user=uWfZKz4AAAAJ&hl=en">Dr. Wayne Wu</a>, <a href="https://liuziwei7.github.io/">Prof. Ziwei Liu</a>, and <a href="https://scholar.google.com.hk/citations?user=beGt3cAAAAAJ&hl=en">Dr Kwan-Yee Lin</a>.
+                <p>Long Zhuo is now a research engineer at Shanghai AI Lab, working closely with <a href="https://scholar.google.com/citations?user=lSDISOcAAAAJ&hl=zh-CN">Dr. Liang Pan</a>, and <a href="https://liuziwei7.github.io/">Prof. Ziwei Liu</a>.
                 </p>
                 <p>
                   My research interests include video / 3D / 4D generation, especially human-related field. 
@@ -49,13 +49,13 @@
                   
                 </p>
 		<p>
-                  [2024-09] 1 paper accepted to TPAMI 2024.
+                  [2024-09] 1 paper (Fast Vid2Vid++) accepted to TPAMI 2024.
                 </p>
                 <p>
-                  [2023-09] 1 paper accepted to NeurIPS 2023 Datasets and Benchmarks Track.
+                  [2023-09] 1 paper (RenderMe-360) accepted to NeurIPS 2023 Datasets and Benchmarks Track.
                 </p>
                 <p>
-                  [2022-07] 1 paper acceted to ECCV 2022.
+                  [2022-07] 1 paper (Fast-Vid2Vid) acceted to ECCV 2022.
                 </p>
                 <p>
                   [2022-05] 1 paper acceted to TIFS.
