--- a/index.html
+++ b/index.html
@@ -67,7 +67,45 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          <tr onmouseout="fvid++_stop()" onmouseover="fvid++_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+              <div class="two" id='fvid++_image'><video  width=100% height=100% muted autoplay loop>
+              <source src="images/fast-vid2vid.gif">
+              Your browser does not support the video tag.
+              </video></div>
+                <img src='images/fv++.png' width="180">
+              </div>
+              <script type="text/javascript">
+                function fvid++_start() {
+                  document.getElementById('fvid++_image').style.opacity = "1";
+                }
 
+                function fvid++_stop() {
+                  document.getElementById('fvid++_image').style.opacity = "0";
+                }
+                fvid++_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://ieeexplore.ieee.org/abstract/document/10652893">
+                <span class="papertitle">Fast-Vid2Vid++: Spatial-Temporal Distillation for Real-Time Video-to-Video Synthesis
+          </span>
+              </a>
+            <br>
+
+          <strong>Long Zhuo</strong>,
+          <a href="#">Guangcong Wang</a>,
+          <a href="#">Shikai Li</a>,
+          <a href="#">Wayne Wu</a>,
+          <a href="#">Ziwei Liu</a>
+            <br>
+            <em>TPAMI</em>, 2024
+            <br>
+            
+          </td>
+</tr>      
+		  
 
             <tr onmouseout="renderme_stop()" onmouseover="renderme_start()">
               <td style="padding:20px;width:25%;vertical-align:middle">
