--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </p>
                 <p>
                   My research interests include video / 3D / 4D generation, especially human-related field. 
-                  <p style="color: red; font-weight: bold;">I am now seeking for a suitable phd position (<a href="mailto:zhuolong49@gmail.com">Email</a>).</p> <br> Please feel free to drop me an email (zhuolong49@gmail.com) if you have any questions.
+                  <p style="color: red; font-weight: bold;">I am now seeking for a suitable phd position (<a href="mailto:zhuolong49@gmail.com">Email</a>).</p> <br> Please feel free to drop me an email if you have any questions.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:zhuolong@pjlab.org.cn">Email</a> &nbsp;/&nbsp;
