--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </p>
                 <p>
                   My research interests include video / 3D / 4D generation, especially human-related field. 
-                  <p style="color: red; font-weight: bold;">I am now seeking for a suitable phd position (<a href="mailto:zhuolong49@gmail.com">Email</a>).</p> <br> Please feel free to drop me an email if you have any questions.
+                  <br> Please feel free to drop me an (<a href="mailto:zhuolong49@gmail.com">email</a>) if you have any questions.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:zhuolong@pjlab.org.cn">Email</a> &nbsp;/&nbsp;
@@ -45,7 +45,13 @@
                 <h2>News</h2>
                 <!-- red fonts -->
                 <p >
-                  
+                </p>
+				  <p >
+                  [2025-08] We release (<a href="https://4dnex.github.io/">4DNeX</a>).
+                </p>  
+                </p>
+				  <p >
+                  [2025-08] We release (<a href="https://zyh482.github.io/Hi3DEval/">Hi3DEval</a>).
                 </p>
 		 <p >
                   [2025-03] 1 paper accepted to TDSC 2025.
