--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <br> Please feel free to drop me an (<a href="mailto:zhuolong49@gmail.com">email</a>) if you have any questions.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:zhuolong@pjlab.org.cn">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:zhuolong49@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=_DVnyb8AAAAJ&hl=zh-CN">Scholar</a> 
 				 
                 </p>
@@ -47,11 +47,11 @@
                 <p >
                 </p>
 				  <p >
-                  [2025-08] We release (<a href="https://4dnex.github.io/">4DNeX</a>).
+                  [2025-08] We release <a href="https://4dnex.github.io/">4DNeX</a>.
                 </p>  
                 </p>
 				  <p >
-                  [2025-08] We release (<a href="https://zyh482.github.io/Hi3DEval/">Hi3DEval</a>).
+                  [2025-08] We release <a href="https://zyh482.github.io/Hi3DEval/">Hi3DEval</a>.
                 </p>
 		 <p >
                   [2025-03] 1 paper accepted to TDSC 2025.
