--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 		 <p >
                   [2025-03] 1 paper accepted to TDSC 2025.
                 </p>
+			  <p >
+                  [2025-01] We release <a href="https://github.com/Vchitect/Vchitect-2.0">Vchitect 2.0</a>.
+                </p>
 		<p>
                   [2024-09] 1 paper (Fast Vid2Vid++) accepted to TPAMI 2024.
                 </p>
