--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </p>  
                 </p>
 				  <p >
-                  [2025-08] We release <a href="https://zyh482.github.io/Hi3DEval/">Hi3DEval</a>.
+                  [2025-08] We release <a href="https://zyh482.github.io/Hi3DEval/">Hi3DEval</a>.  [2025-09] Hi3DEval has been accept to NeurIPS D&B 2025.
                 </p>
 		 <p >
                   [2025-03] 1 paper accepted to TDSC 2025.
