--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Long Zhuo is now a research engineer at Shanghai AI Lab, working closely with <a href="https://scholar.google.com/citations?user=lSDISOcAAAAJ&hl=zh-CN">Dr. Liang Pan</a>, and <a href="https://liuziwei7.github.io/">Prof. Ziwei Liu</a>.
                 </p>
                 <p>
-                  My research interests include video / 3D / 4D generation, especially human-related field. 
+                  My research interests include video / 3D / 4D / world model generation, especially physical-AI generation field. 
                   <br> Please feel free to drop me an (<a href="mailto:zhuolong49@gmail.com">email</a>) if you have any questions.
                 </p>
                 <p style="text-align:center">
@@ -35,7 +35,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:20%;max-width:20%">
-                <a href="images/zhuolong.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 45%;" alt="profile photo" src="images/zhuolong.jpg" class="hoverZoomLink"></a>
+                <a href="images/zhuolong.jpg"><img style="width:100%;max-width:100%; border-radius: 45%;" alt="profile photo" src="images/zhuolong.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
