--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Long Zhuo is now a research engineer at Shanghai AI Lab, working closely with <a href="https://scholar.google.com/citations?user=lSDISOcAAAAJ&hl=zh-CN">Dr. Liang Pan</a>, and <a href="https://liuziwei7.github.io/">Prof. Ziwei Liu</a>.
                 </p>
                 <p>
-                  My research interests include video / 3D / 4D / world model generation, especially in physical-AI generation field. 
+                  My research interests include video / 3D / 4D / world model generation, especially in physical-AI generation domain. 
 					
                   <br> Please feel free to drop me an (<a href="mailto:zhuolong49@gmail.com">email</a>) if you have any questions.
                 </p>
