--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <source src="images/4dnex.gif">
               Your browser does not support the video tag.
               </video></div>
-                <img src='images/4dnex.png' width="180">
+                <img src='images/4dnex.png' width="180"  style="display:block;margin:auto;">
               </div>
               <script type="text/javascript">
                 function fvid_start() {
@@ -135,7 +135,7 @@
               <source src="images/hi3deval.gif">
               Your browser does not support the video tag.
               </video></div>
-                <img src='images/hi3deval.png' width="180">
+                <img src='images/hi3deval.png' width="180"  style="display:block;margin:auto;">
               </div>
               <script type="text/javascript">
                 function fvid_start() {
