--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
               <source src="images/4dnex.gif">
               Your browser does not support the video tag.
               </video></div>
-                <img src='images/4dnex.png' width="180"  style="display:block;margin:auto;">
+				  <div class="imgcontainer">
+                <img src='images/4dnex.png' width="180" >
+					  </div>
               </div>
               <script type="text/javascript">
                 function fvid_start() {
@@ -135,7 +137,7 @@
               <source src="images/hi3deval.gif">
               Your browser does not support the video tag.
               </video></div>
-                <img src='images/hi3deval.png' width="180"  style="display:block;margin:auto;">
+                <img src='images/hi3deval.png' width="180" >
               </div>
               <script type="text/javascript">
                 function fvid_start() {
